2005-07-13  Igor Foox <ifoox@redhat.com>

	* modulesets/gcj.modules: Resolved circular dependencies for
	java-gnome modules.  'java-gnome' is now a meta-module for all
	java-gnome related modules.

2005-07-13  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.12.modules: kill gnome-mime-data

2005-07-10  Johan Dahlin  <johan@gnome.org>

	* modulesets/gnome-2.10.modules: Use the pygtk-2-6 branch

2005-07-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* modulesets/gnome-2.12.modules: Suggest gnome-python-extras for
	meta-gnome-python.  Suggest pycairo for pygtk.

2005-07-09  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/freedesktop.modules: Use version 0.8 of
	the Hicolor icon theme.

2005-07-08  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.12.modules: glom now depends on 
	libgnomecanvasmm.

2005-07-07  Luis Villa <luis.villa@gmail.com>

	* modulesets/gnome-2.12.modules (system-tools):
	add nautilus dependency.
	
2005-07-07  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-2.10.modules:
	use gnome-2-10 branch for yelp.

2005-07-05  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome28.modules (eog): use gnome-2-8 branch.
	(gnomemm/gconfmm): use gnome-2-8 branch.
	(gnomemm/libglademm): use gnome-2-8 branch.
	(gnome-volume-manager): use gnome-2-8 branch.
	(gtranslator): use gnome-2-8 branch.
	(zenity): use gnome-2-8 branch.

	* modulesets/gnome-2.10.modules (dasher): use gnome-2-10 branch.
	(file-roller): use gnome-2-10 branch.
	(gnome-doc-utils): use gnome-2-10 branch.
	(libgnomeprint): use gnome-2-10 branch.
	(libgnomeprintui): use gnome-2-10 branch.
	(librsvg): use gnome-2-10 branch.
	(vino): use gnome-2-10 branch.
	(zenity): use gnome-2-10 branch.

2005-07-01  James Henstridge  <james@jamesh.id.au>

	* modulesets/bootstrap.modules (pkg-config): update to 0.18.1 to
	fix problems mentioned in bug #309214.

2005-06-29  James Henstridge  <james@jamesh.id.au>
